# TurtleBot3-MPC

./: .rosinstall  .rosinstall.bak  README.md
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/launch/: darknet_ros.launch
mpc_local_planner/mpc_local_planner/: CMakeLists.txt
mpc_ros/mpc_ros/include/: MPC.h
mpc_ros/mpc_ros/launch/: mpc_local_planner.launch  nav_gazebo.launch  ref_trajectory_tracking_gazebo.launch  s_map_mpc_local_planner.launch
mpc_ros/mpc_ros/params/: mpc_last_params.yaml  mpc_params.yaml
mpc_ros/mpc_ros/script/: dwa_trajectory_generation.py  mpc_trajectory_generation.py
mpc_ros/mpc_ros/src/: navMPC.cpp
servingbot/: README.md
servingbot/serving_mobile/: Manual
servingbot/serving_mobile/rplidar_ros/: package.xml
servingbot/serving_mobile/rplidar_ros/launch/: rplidar.launch
servingbot/serving_mobile/rplidar_ros/src/: node.cpp
servingbot/serving_mobile/serving_mobile/: CMakeLists.txt  package.xml
servingbot/serving_mobile/serving_simuation/servingbot_gazebo/launch/: multi-servingbot_rl_world.launch  servingbot_rl_world.launch
servingbot/serving_mobile/servingbot_description/urdf/: servingbot_rl.gazebo.xacro
servingbot/serving_mobile/servingbot_navigation/: CMakeLists.txt  package.xml
servingbot/serving_mobile/servingbot_navigation/launch/: amcl.launch  move_base.launch  servingbot_navigation.launch  servingbot_navigation_all.launch  servingbot_rl_test.launch
servingbot/serving_mobile/servingbot_navigation/maps/: map (copy).pgm  map.pgm  map.yaml  map_.pgm  map_.yaml  map___.pgm
servingbot/serving_mobile/servingbot_navigation/maps/mymap/: map'.pgm  map.pgm  map0.pgm  map1.pgm  map2.pgm  map3.pgm  map4.pgm  map5.pgm  map6.pgm  map7.pgm  map8.pgm  map_before.pgm
servingbot/serving_mobile/servingbot_navigation/param/: base_local_planner_params.yaml  costmap_common_params_servingbot.yaml  dwa_local_planner_params_servingbot.yaml  local_costmap_params.yaml
servingbot/serving_mobile/servingbot_navigation/rviz/: servingbot_navigation.rviz
servingbot/serving_mobile/servingbot_slam/: CMakeLists.txt  package.xml
servingbot/serving_mobile/servingbot_slam/bag/: bag_files.md
servingbot/serving_mobile/servingbot_slam/launch/: servingbot_gmapping.launch  servingbot_sick_gmapping.launch  servingbot_slam.launch
servingbot/serving_mobile/servingbot_slam/rviz/: servingbot_gmapping.rviz
servingbot/serving_mobile/servingbot_slam/src/: flat_world_imu_node.cpp
servingbot/serving_mobile/servingbot_teleop/: CMakeLists.txt  package.xml  setup.py
servingbot/serving_mobile/servingbot_teleop/launch/: servingbot_teleop_key.launch
servingbot/serving_mobile/servingbot_teleop/nodes/: servingbot_teleop_key
servingbot/serving_mobile/simple_navigation_goals_pose/: CMakeLists.txt  package.xml
servingbot/serving_mobile/simple_navigation_goals_pose/src/: simple_navigation_goals_pose (Auto).cpp  simple_navigation_goals_pose (Room).cpp  simple_navigation_goals_pose.cpp
turtlebot3/turtlebot3_navigation/launch/: amcl.launch  turtlebot3_navigation.launch
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_world.launch
turtlebot3_slam_3d/urdf/: waffle_deep.urdf.xacro
turtlebot_mpc/: CMakeLists.txt  package.xml  setup.py
turtlebot_mpc/cfg/: input.csv  input1.csv  input2.csv  input3.csv  mpc_config.yaml  state.csv  state1.csv  state2.csv  state3.csv
turtlebot_mpc/launch/: turtlebot_mpc.launch
turtlebot_mpc/scripts/: turtlebot_mpc_node
turtlebot_mpc/src/turtlebot_mpc/: turtle_bot_mpc.py  unicycle_mpc.py
turtlebot_navigation/param/: move_base_params.yaml
turtlebot_octomap/: CMakeLists.txt  LICENSE  README.md  package.xml
turtlebot_octomap/config/: octomap_test.rviz
turtlebot_octomap/launch/: turtlebot3_build_map.launch  turtlebot_build_map.launch  turtlebot_rtabmap.launch
