<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_mpc</name>
  <version>0.0.1</version>
  <description>The turtlebot_mpc package</description>

  <maintainer email="tsender97@gmail.com">tsender</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>

