<?xml version="1.0"?>
<package format="2">
  <name>servingbot_slam</name>
  <version>0.1.0</version>
  <description>
    The servingbot_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="bumsol95@gmail.com">Beomsol Park</author>
  <maintainer email="bumsol95@gmail.com">Beomsol Park</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>servingbot_bringup</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <!-- <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>cartographer_rviz</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>
  <exec_depend>navigation_stage</exec_depend> -->
</package>
