<?xml version="1.0"?>
<package format="2">
  <name>simple_navigation_goals_pose</name>
  <version>0.1.0</version>
  <description>The simple_navigation_goals_pose package</description>

  <license>BSD</license>

  <author email="gdh8652@gmail.com">Donghyun Ko</author>
  <maintainer email="gdh8652@gmail.com">Donghyun Ko</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
